# src/ssh_cert_service/views/api_v1/token.py
@@ -1,0 +1,53 @@
+from elasticsearch import RequestError
+from flask_tern import openapi
+from flask import abort, jsonify, request
+from cryptography.fernet import Fernet
+
+from cryptography.hazmat.primitives import serialization as crypto_serialization
+from cryptography.hazmat.primitives.asymmetric import rsa
+from cryptography.hazmat.backends import default_backend as crypto_default_backend
+
+
+from .blueprint import bp
+
+@bp.route("/token")
+@openapi.validate()
+def token_get():
+    """
+    Generate a ssh key public and private, save the key in auth know host and return the keys, public and private
+
+    :return: object public-key and private-key
+    :rtype: json
+    """
+    key = rsa.generate_private_key(
+        backend=crypto_default_backend(),
+        public_exponent=65537,
+        key_size=2048
+    )
+
+    private_key = key.private_bytes(
+        crypto_serialization.Encoding.PEM,
+        crypto_serialization.PrivateFormat.PKCS8,
+        crypto_serialization.NoEncryption())
+
+    public_key = key.public_key().public_bytes(
+        crypto_serialization.Encoding.OpenSSH,
+        crypto_serialization.PublicFormat.OpenSSH
+    )
+    
+    return jsonify({
+        'public_key': public_key.decode("utf-8"),
+        'private_key': private_key.decode("utf-8"),
+    })
+
+
+@bp.route("/token/login", methods=["POST"])
+@openapi.validate()
+def token_login_post():
+    """
+    Check that the public key is valid hasn't expired and match with the storage in DB 
+
+    :return: object public-key and private-key
+    :rtype: json
+    """
+    pass
